--- a/.htaccess
+++ b/.htaccess
@@ -9,4 +9,6 @@ DirectoryIndex index.php index.html
 # php
 <IfModule mod_php5.c>
 	php_flag short_open_tag On
+	php_flag request_order Off
+	php_value request_order "GPC"
 </IfModule>
