文言修正漏れ対応

--- a/public/config.php.sample
+++ b/public/config.php.sample
@@ -28,17 +28,17 @@ $config = array(
 	//ページIDとページ名称の設定
 	'pages' => array(
 		'top' => 'トップ',
-		'mentions' => 'あなた宛のつぶやき',
+		'mentions' => 'あなた宛の投稿',
 		'search' => '実況ビュー',
 		'help' => 'ヘルプ',
 		'action' => 'コマンド？',
 		'user' => 'ユーザービュー',
 		'lists' => 'リストビュー',
-		'post/tweet' => 'つぶやきを投稿する',
-		'post/retweet' => 'つぶやきをRTする',
-		'post/destroy' => 'つぶやきを削除する',
-		'post/favorite' => 'ふぁぼる',
-		'post/unfavorite' => 'ふぁぼりをやめる',
+		'post/tweet' => '投稿する',
+		'post/retweet' => '投稿をRTする',
+		'post/destroy' => '投稿を削除する',
+		'post/favorite' => 'お気に入り追加',
+		'post/unfavorite' => 'お気に入り削除',
 		'post/follow' => 'フォローする',
 		'post/unfollow' => 'フォローをやめる',
 		'info/lists' => '作成したリスト・購読しているリスト',
