--- a/public/config.php.example
+++ b/public/config.php.example
@@ -61,7 +61,7 @@ $config = array(
 		'port' => 3306,
 		'user' => '',
 		'password' => '',
-		'dbname' => '',
+		'database' => 'oretter',
 	),
 	'auth' => array(
 		'table' => 'oretter_auth_tokens',
