--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "lib/twitteroauth"]
-	path = lib/twitteroauth
+[submodule "twitteroauth"]
+	path = twitteroauth
 	url = https://github.com/abraham/twitteroauth.git
